--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
+    "jsonwebtoken": "^9.0.0",
     "next": "13.4.3",
+    "next-connect": "^1.0.0-next.4",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -24,6 +28,9 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
-    "prisma": "^4.14.1"
+    "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.2",
+    "prisma": "^4.14.1",
+    "prisma-dbml-generator": "^0.10.0"
   }
 }
