--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@prisma/client": "^4.14.1",
+    "@prisma/client": "^4.15.0",
     "@types/node": "20.2.1",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
+    "formidable": "^2.1.1",
     "jsonwebtoken": "^9.0.0",
     "next": "13.4.3",
     "next-connect": "^1.0.0-next.4",
@@ -31,8 +32,9 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/formidable": "^2.0.6",
     "@types/jsonwebtoken": "^9.0.2",
-    "prisma": "^4.14.1",
+    "prisma": "^4.15.0",
     "prisma-dbml-generator": "^0.10.0"
   }
 }
