--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
     "@types/jsonwebtoken": "^9.0.2",
     "prisma": "^4.15.0",
     "prisma-dbml-generator": "^0.10.0"
+  },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   }
 }
