--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "license": "MIT",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 4000",
     "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
@@ -35,6 +35,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/formidable": "^2.0.6",
     "@types/jsonwebtoken": "^9.0.2",
+    "local-ssl-proxy": "^2.0.5",
     "prisma": "^4.15.0",
     "prisma-dbml-generator": "^0.10.0"
   },
