--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "cors": "^2.8.5",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
+    "flowbite": "^1.8.1",
+    "flowbite-react": "^0.6.4",
     "formidable": "^2.1.1",
     "jsonwebtoken": "^9.0.0",
+    "multer": "^1.4.5-lts.1",
     "next": "13.4.3",
     "next-connect": "^1.0.0-next.4",
     "postcss": "8.4.23",
@@ -35,6 +38,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/formidable": "^2.0.6",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/multer": "^1.4.8",
     "local-ssl-proxy": "^2.0.5",
     "prisma": "^4.15.0",
     "prisma-dbml-generator": "^0.10.0"
